--- a/WBUI2Config.json
+++ b/WBUI2Config.json
@@ -124,7 +124,7 @@
 		"links": [
 			{
 				"text": "WEBSTORE",
-				"url": "https://gamersden.serverstore.io/shop"
+				"url": "https://gamesden.tip4serv.com/"
 			},
 			{
 				"text": "DISCORD",
